fix(str-1171): remove overflow hidden from Accordion
When the fieldtype date/time was inside a fieldtype group (it uses the SbAccordion) the datepicker was getting croppred

--- a/src/components/Accordion/accordion.scss
+++ b/src/components/Accordion/accordion.scss
@@ -38,7 +38,6 @@
 }
 
 .sb-accordion__content {
-  overflow: hidden;
   box-sizing: border-box;
   width: 100%;
   padding: $small-size $medium-size $medium-size $large-size;
